--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 </body>
 
 	<form method = "post">
+		<h1>Feedback Form</h1>
 	<label  for= "name"> Name : </label> <input type = "text" id="name" minlength = "3" maxlength="50"><br><br>
 	<lable for = "portfolio">Portfolio :</lable> <input type = "url" id="portfolio" required><br><br>
 	<lable for="favColor"> favorite Color :</lable> <input type ="color"><br><br>
