--- a/main.html
+++ b/main.html
@@ -15,9 +15,9 @@
 
 	<h2>Feedback Form</h2>
 	<form method = "post">
-	<label  for= "name"> Name </label> <input type = "text" id="name" minlength = "3" maxlength="50"><br><br>
-	<lable for = "portfolio">Portfolio </lable> <input type = "url" id="portfolio" required><br><br>
-	<lable for="favColor"> favorite Color </lable> <input type ="color"><br><br>
+	<label for="name"> Name </label> <input type = "text" id="name" minlength = "3" maxlength="50"><br><br>
+	<lable for ="portfolio">Portfolio </lable> <input type = "url" id="portfolio" required><br><br>
+	<lable for="favColor"> Favorite Color </lable> <input type ="color"><br><br>
 	<label for="likeness">Likeness  </label><input type ="range" min="1" maX="100">
 	</form>
 </html>
