--- a/main.html
+++ b/main.html
@@ -14,10 +14,10 @@
 </body>
 
 	<h2>Feedback Form</h2>
-	<form method = "post" action="">
-	<label for="name"> Name </label> <input type ="text" id="name" minlength = "3" maxlength="50"><br>
-	<lable for ="portfolio">Portfolio </lable> <input type = "url" id="portfolio" required><br>
-	<lable for="favColor"> Favorite Color </lable> <input type ="color"><br>
+	<form method = "post">
+	<label for="name"> Name </label> <input type ="text" id="name" minlength = "3" maxlength="50">
+	<lable for ="portfolio">Portfolio </lable> <input type = "url" id="portfolio" required>
+	<lable for="favColor"> Favorite Color </lable> <input type ="color">
 	<label for="likeness">Likeness  </label><input type ="range" min="1" maX="100">
 	</form>
 </html>
