--- a/main.html
+++ b/main.html
@@ -15,9 +15,12 @@
 
 	<h2>Feedback Form</h2>
 	<form method = "post">
-	<label for="name"> Name </label> <input type ="text" id="name" minlength = "3" maxlength="50">
-	<lable for ="portfolio">Portfolio </lable> <input type = "url" id="portfolio" required>
-	<lable for="favColor"> Favorite Color </lable> <input type ="color">
+	<label for="name"> Name </label> 
+		<input type ="text" id="name" minlength = "3" maxlength="50">
+	<lable for ="portfolio">Portfolio </lable>
+		<input type = "url" id="portfolio" required>
+	<lable for="favColor"> Favorite Color </lable>
+		<input type ="color" id="favcolor">
 	<label for="likeness">Likeness  </label><input type ="range" min="1" maX="100">
 	</form>
 </html>
