--- a/main.html
+++ b/main.html
@@ -16,12 +16,12 @@
 	<h2>Feedback Form</h2>
 	<form method = "post">
 	<label for="name"> Name </label> 
-		<input type ="text" name = "name" id="name" minlength = "3" maxlength="50">
+		<input type ="text" name = "name" id="name" minlength = "3" maxlength="50" required>
 	<lable for ="portfolio">Portfolio </lable>
 		<input type = "url" id="portfolio" name="portfolio" required>
 	<lable for="favColor"> Favorite Color </lable>
-		<input type ="color" id="favcolor" name="color">
+		<input type ="color" id="favcolor" name="color" required>
 	<label for="likeness">Likeness  </label>
-		<input type ="range" id= "likeness" name="likeness" min="1" maX="100">
+		<input type ="range" id= "likeness" name="likeness" min="1" maX="100" required>
 	</form>
 </html>
