--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
 	<lable for ="portfolio">Portfolio </lable>
 		<input type = "url" id="portfolio" name="portfolio" required><br>
 	<lable for="favColor"> Favorite Color </lable>
-		<input type ="color" id="favcolor" name="color" required><br>
+		<input type ="color" id="favColor" name="color" required><br>
 	<label for="likeness">Likeness  </label>
 		<input type ="range" id= "likeness" name="likeness" min="1" maX="100" required><br>
 		<input type="submit" value ="submit">
