--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 </body>
 
 	
-	<form method = "post">
+	<form method = "post" action="mailto:pravinshivajipatil37@gmail.com">
 		<h2>Feedback Form</h2>
 	<label for="name"> Name </label> 
 		<input type ="text" name = "name" id="name" minlength = "3" maxlength="50" required><br>
