--- a/main.html
+++ b/main.html
@@ -16,14 +16,18 @@
 	
 	<form method = "post" action="mailto:pravinshivajipatil37@gmail.com">
 		<h2>Feedback Form</h2>
-	<label for="name"> Name </label> 
-		<input type ="text" name = "name" id="name" minlength = "3" maxlength="50" required><br>
-	<lable for ="portfolio">Portfolio </lable>
-		<input type = "url" id="portfolio" name="portfolio" required><br>
-	<lable for="favColor"> Favorite Color </lable>
-		<input type ="color" id="favColor" name="color" required><br>
-	<label for="likeness">Likeness  </label>
-		<input type ="range" id= "likeness" name="likeness" min="1" maX="100" required><br>
-		<input type="submit" value ="submit">
+	 <label for="name">Name:</label>
+        <input type="text" id="name" name="name" minlength="3" maxlength="50" required><br><br>
+
+        <label for="portfolio">Portfolio URL:</label>
+        <input type="url" id="portfolio" name="portfolio" required><br><br>
+
+        <label for="favColor">Favorite Color:</label>
+        <input type="color" id="favColor" name="favColor" required><br><br>
+
+        <label for="likeness">Likeness (1-100):</label>
+        <input type="range" id="likeness" name="likeness" min="1" max="100" required><br><br>
+
+        <input type="submit" value="Submit">
 	</form>
 </html>
